--- a/package.json
+++ b/package.json
@@ -48,27 +48,17 @@
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
 
-    "deploy-all": "npx hardhat run scripts/deploy/deployAll.ts",
-    "verify-all": "npx hardhat run scripts/verify/verifyAll.ts",
+    "deploy": "npx hardhat run scripts/deploy/deployAll.ts",
+    "verify": "npx hardhat run scripts/verify/verifyAll.ts",
     "mint": "npx hardhat run scripts/deploy/mint.ts",
     "deploy-ftokens": "npx hardhat run scripts/deploy/deployFTokens.ts",
     "verify-ftokens": "npx hardhat run scripts/verify/verifyFTokens.ts",
-    "set-oracle": "npx hardhat run scripts/deploy/OracleContract.set.ts",
-    "set-secret": "npx hardhat run scripts/deploy/SecretContract.set.ts",
-    "set-leverage": "npx hardhat run scripts/deploy/setLeveragePercent.ts",
 
     "pair": "yarn hardhat test scripts/test/TestContract.test.ts",
-    "test-box": "yarn hardhat test scripts/test/BoxV2.test.ts",
-    "test-oracle": "yarn hardhat test scripts/test/OracleContract.test.ts",
-    "test-oracle-testnet": "yarn hardhat test scripts/test/testnet/OracleContract.test.ts",
-    "test-oracle-v2-testnet": "yarn hardhat test scripts/test/testnet/OracleContractV2.test.ts",
-    "test-secret": "yarn hardhat test scripts/test/SecretContract.test.ts",
-    "test-secret-v2": "yarn hardhat test scripts/test/SecretContractV2.test.ts",
-    "test-router": "yarn hardhat test scripts/test/FairSwapRouter.test.ts",
-    "test-router-livenet": "yarn hardhat test scripts/test/livenet/FairSwapRouter.test.ts",
-    "test-router-testnet": "yarn hardhat test scripts/test/testnet/FairSwapRouter.test.ts",
+    "test-router": "yarn hardhat test scripts/test/UniswapV2Router02.test.ts",
+    "test-router-livenet": "yarn hardhat test scripts/test/livenet/UniswapV2Router02.test.ts",
+    "test-router-testnet": "yarn hardhat test scripts/test/testnet/UniswapV2Router02.test.ts",
 
-    "verify": "yarn hardhat run scripts/verify/verify.ts",
     "verify-mock": "yarn hardhat run scripts/verify/verifyMock.ts --network polygonMumbai",
     "coverage": "yarn build && npx hardhat coverage --temp artifacts --network coverage",
     "postinstall": "yarn compile",
